--- a/1210.6348/text.tex
+++ b/1210.6348/text.tex
@@ -8,17 +8,44 @@
 \usepackage{fancybox}
 \usepackage{url}
 \usepackage[small]{caption}
-\setlength{\textwidth}{17.6cm}
-\setlength{\textheight}{21.9cm}
-\setlength{\oddsidemargin}{-0.5cm}
-\setlength{\evensidemargin}{0cm}
-\setlength{\headheight}{0cm}
-\setlength{\headsep}{0cm}
-\setlength{\topmargin}{0cm}
-\setlength{\footskip}{1.5cm}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/mnsymbol.tex}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/revtex-12-fix.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 \begin{document}
-\baselineskip 0.6cm
 
 \def\simgt{\mathrel{\lower2.5pt\vbox{\lineskip=0pt\baselineskip=0pt
            \hbox{$>$}\hbox{$\sim$}}}}
@@ -593,17 +620,17 @@ where $\gamma \equiv 1/\sqrt{1-|{\bf v}|^2}$ and ${\bf n}$ is a unit vector
 pointing to a random direction.  The mass and the velocity of the black hole, 
 therefore, change by
 %
-\begin{eqnarray}
-  && \varDelta M \,=\, \sqrt{M^2-2} - M 
+\begin{align}
+  \varDelta M &= \sqrt{M^2-2} - M 
   \,\approx\, -\frac{1}{M},
 \label{eq:delta-M}\\
-  && \varDelta {\bf v} \,=\, \frac{1}{\gamma \{M^2-(1-{\bf n}\cdot{\bf v})\}}
+   \varDelta {\bf v} & =\, \frac{1}{\gamma \{M^2-(1-{\bf n}\cdot{\bf v})\}}
     \left\{ {\bf n} - \left(1-\frac{1}{\gamma}\right) 
     \frac{{\bf n}\cdot{\bf v}}{|{\bf v}|^2} {\bf v} \right\}
-  \,\approx\, \frac{1}{M^2}{\bf n} 
+  \nonumber\\ & \approx\, \frac{1}{M^2}{\bf n} 
     - \frac{{\bf n}\cdot{\bf v}}{2M^2} {\bf v},
 \label{eq:delta-v}
-\end{eqnarray}
+\end{align}
 %
 in each time interval
 %
