--- a/bib.bib
+++ b/bib.bib
@@ -1,21 +1,40 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2020-02-01 08:59:21 -0500 
+%% Created for Pete Su at 2020-02-01 09:31:32 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@article{Nomura:2012cx,
+	Archiveprefix = {arXiv},
+	Author = {Nomura, Yasunori and Varela, Jaime and Weinberg, Sean J.},
+	Date-Added = {2020-02-01 09:30:26 -0500},
+	Date-Modified = {2020-02-01 09:31:06 -0500},
+	Doi = {10.1103/PhysRevD.87.084050},
+	Eprint = {1210.6348},
+	Journal = {Phys. Rev.},
+	Note = {\href{https://arxiv.org/abs/1210.6348}{arXiv:1210.6348}},
+	Pages = {084050},
+	Primaryclass = {hep-th},
+	Reportnumber = {MIT-CTP-4405, UCB-PTH-12-17},
+	Slaccitation = {%%CITATION = ARXIV:1210.6348;%%},
+	Title = {{Black Holes, Information, and Hilbert Space for Quantum Gravity}},
+	Volume = {D87},
+	Year = {2013},
+	Bdsk-Url-1 = {https://doi.org/10.1103/PhysRevD.87.084050}}
+
 @article{Nomura:2018kia,
 	Archiveprefix = {arXiv},
 	Author = {Nomura, Yasunori},
 	Date-Added = {2020-02-01 08:59:18 -0500},
-	Date-Modified = {2020-02-01 08:59:18 -0500},
+	Date-Modified = {2020-02-01 09:31:32 -0500},
 	Doi = {10.1103/PhysRevD.99.086004},
 	Eprint = {1810.09453},
 	Journal = {Phys. Rev.},
+	Note = {\href{https://arxiv.org/abs/1810.09453}{arXiv:1810.09453}},
 	Number = {8},
 	Pages = {086004},
 	Primaryclass = {hep-th},
