--- a/1110.4630/text.tex
+++ b/1110.4630/text.tex
@@ -6,17 +6,43 @@
 \usepackage{epsfig}
 \usepackage{url}
 \usepackage[small]{caption}
-\setlength{\textwidth}{17.6cm}
-\setlength{\textheight}{21.9cm}
-\setlength{\oddsidemargin}{-0.5cm}
-\setlength{\evensidemargin}{0cm}
-\setlength{\headheight}{0cm}
-\setlength{\headsep}{0cm}
-\setlength{\topmargin}{0cm}
-\setlength{\footskip}{1.5cm}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.05}
+\usepackage[papersize={7in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\sloppy
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/mnsymbol.tex}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/revtex-12-fix.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 \begin{document}
-\baselineskip 0.6cm
 
 \def\simgt{\mathrel{\lower2.5pt\vbox{\lineskip=0pt\baselineskip=0pt
            \hbox{$>$}\hbox{$\sim$}}}}
@@ -640,7 +666,7 @@ After $t \approx t_{\rm m}$, the full state becomes
 %
 due to the {\it standard time evolution} of the state:\ 
 $\ket{\Psi_{{\rm sys}+{\rm app}}(t_1)} = e^{-iH(t_1-t_2)} 
-\ket{\Psi_{{\rm sys}+{\rm app}}(t_2)}$.  Here, $\bigl|\apparatusup\bigr>$ 
+\break \ket{\Psi_{{\rm sys}+{\rm app}}(t_2)}$.  Here, $\bigl|\apparatusup\bigr>$ 
 and $\bigl|\apparatusdown\bigr>$ represent configurations of the 
 apparatus showing that it has measured spin up and down, respectively, 
 and $H$ is the Hamiltonian for the combined system of the apparatus 
@@ -2656,12 +2682,12 @@ some lower energy vacua, given that there is a huge number of possible
 decay channels.  The multiverse state, therefore, will asymptotically 
 become a superposition of supersymmetric Minkowski and singularity states:
 %
-\begin{equation}
+\begin{multline}
   \ket{\Psi(t)} \,\,\stackrel{t \rightarrow \infty}{\longrightarrow}\,\, 
     \sum_i a_i(t) \ket{\mbox{supersymmetric Minkowski world $i$}}
-  \,+\, \sum_j b_j(t) \ket{\mbox{``singularity world'' $j$}},
+  \,\\ + \sum_j b_j(t) \ket{\mbox{``singularity world'' $j$}},
 \label{eq:asympt}
-\end{equation}
+\end{multline}
 %
 where the first sum runs over components with varying matter content, 
 spatial dimensions, and the amount of supersymmetries, while the second 
@@ -2739,7 +2765,7 @@ about real, physical time is included in conditions $A$ and $B$ through
 specifications of any non-static observables.  The relevant probability 
 $P(B|A)$ is then given by
 %
-\begin{equation}
+\begin{equation}\small
   P(B|A) = \frac{\int\!\!\!\int\!dt_1 dt_2 \bra{\Psi(0)} U(0,t_1)\, 
       {\cal O}_{A_{\rm pre}}\, U(t_1,t_2)\, {\cal O}_{A_{\rm post} \cap B}\, 
       U(t_2,t_1)\, {\cal O}_{A_{\rm pre}}\, U(t_1,0) \ket{\Psi(0)}}
@@ -2830,7 +2856,7 @@ state, so that the system is described by a density matrix:\ $\rho(t)
 \equiv \sum_i p_i \ket{\Psi_i(t)} \bra{\Psi_i(t)}$ with $\sum_i p_i = 1$. 
 In this case, Eq.~(\ref{eq:prob-final}) is straightforwardly extended to
 %
-\begin{equation}
+\begin{equation}\small
   P(B|A) = \frac{\int\!\!\!\int\!dt_1 dt_2\, {\rm Tr}\left[ \rho(0)\, 
     U(0,t_1)\, {\cal O}_{A_{\rm pre}}\, U(t_1,t_2)\, 
     {\cal O}_{A_{\rm post} \cap B}\, U(t_2,t_1)\, {\cal O}_{A_{\rm pre}}\, 
@@ -3203,6 +3229,7 @@ mechanical universe.
 
 
 \begin{thebibliography}{99}
+\raggedright
 
 \bibitem{Weinberg:1987dv}
 S.~Weinberg,
