--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,30 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2020-02-01 09:31:32 -0500 
+%% Created for Pete Su at 2020-02-01 10:07:21 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Nomura:2011rb,
+	Archiveprefix = {arXiv},
+	Author = {Nomura, Yasunori},
+	Date-Added = {2020-02-01 10:06:40 -0500},
+	Date-Modified = {2020-02-01 10:07:21 -0500},
+	Doi = {10.1007/s10701-013-9729-1},
+	Eprint = {1110.4630},
+	Journal = {Found. Phys.},
+	Note = {\href{https://arxiv.org/abs/1110.4630}{arXiv:1110.4630}},
+	Pages = {978-1007},
+	Primaryclass = {hep-th},
+	Reportnumber = {UCB-PTH-11-08},
+	Slaccitation = {%%CITATION = ARXIV:1110.4630;%%},
+	Title = {{Quantum Mechanics, Spacetime Locality, and Gravity}},
+	Volume = {43},
+	Year = {2013},
+	Bdsk-Url-1 = {https://doi.org/10.1007/s10701-013-9729-1}}
 
 @article{Nomura:2012cx,
 	Archiveprefix = {arXiv},
