--- a/1110.4630/text.tex
+++ b/1110.4630/text.tex
@@ -2765,7 +2765,7 @@ about real, physical time is included in conditions $A$ and $B$ through
 specifications of any non-static observables.  The relevant probability 
 $P(B|A)$ is then given by
 %
-\begin{equation}\small
+{\small\begin{equation}
   P(B|A) = \frac{\int\!\!\!\int\!dt_1 dt_2 \bra{\Psi(0)} U(0,t_1)\, 
       {\cal O}_{A_{\rm pre}}\, U(t_1,t_2)\, {\cal O}_{A_{\rm post} \cap B}\, 
       U(t_2,t_1)\, {\cal O}_{A_{\rm pre}}\, U(t_1,0) \ket{\Psi(0)}}
@@ -2773,7 +2773,7 @@ $P(B|A)$ is then given by
       {\cal O}_{A_{\rm pre}}\, U(t_1,t_2)\, {\cal O}_{A_{\rm post}}\, 
       U(t_2,t_1)\, {\cal O}_{A_{\rm pre}}\, U(t_1,0) \ket{\Psi(0)}}.
 \label{eq:prob-final}
-\end{equation}
+\end{equation}}
 %
 Here, $U(t_1,t_2) = e^{-iH(t_1-t_2)}$ is the ``time evolution'' operator 
 with $H$ being the Hamiltonian for the entire system, and ${\cal O}_X$ 
@@ -2856,7 +2856,7 @@ state, so that the system is described by a density matrix:\ $\rho(t)
 \equiv \sum_i p_i \ket{\Psi_i(t)} \bra{\Psi_i(t)}$ with $\sum_i p_i = 1$. 
 In this case, Eq.~(\ref{eq:prob-final}) is straightforwardly extended to
 %
-\begin{equation}\small
+{\small\begin{equation}
   P(B|A) = \frac{\int\!\!\!\int\!dt_1 dt_2\, {\rm Tr}\left[ \rho(0)\, 
     U(0,t_1)\, {\cal O}_{A_{\rm pre}}\, U(t_1,t_2)\, 
     {\cal O}_{A_{\rm post} \cap B}\, U(t_2,t_1)\, {\cal O}_{A_{\rm pre}}\, 
@@ -2866,7 +2866,7 @@ In this case, Eq.~(\ref{eq:prob-final}) is straightforwardly extended to
     {\cal O}_{A_{\rm post}}\, U(t_2,t_1)\, {\cal O}_{A_{\rm pre}}\, 
     U(t_1,0) \right]}.
 \label{eq:prob-final-rho}
-\end{equation}
+\end{equation}}
 %
 This formula is also applicable for a reduced density matrix, obtained 
 by tracing out some of the degrees of freedom, with the understanding 
@@ -3166,20 +3166,20 @@ desk, because the two terms will evolve (eventually) into two different
 supersymmetric Minkowski (or singularity) states, which will never 
 recohere.  It is clear that writing the state as in Eq.~(\ref{eq:after-2}),
 %
-\begin{eqnarray}
-  && \ket{\Psi(t \gg t_{\rm obs})} 
-  = \frac{1}{2\sqrt{2}} (\ket{\uparrow} + \ket{\downarrow}) 
+\begin{align}
+  \ket{\Psi(t \gg t_{\rm obs})} 
+  &= \frac{1}{2\sqrt{2}} (\ket{\uparrow} + \ket{\downarrow}) 
     \Bigl( \bigl|\apparatusup\bigr> \bigl|\desk\bigr> 
     \bigl|\obsafter\brainup\bigr> + \bigl|\apparatusdown\bigr> 
     \bigl|\desk\bigr> \bigl|\obsafter\braindown\bigr> \Bigr) 
 \nonumber\\
-  && \qquad\qquad\qquad\,
-    + \frac{1}{2\sqrt{2}} (\ket{\uparrow} - \ket{\downarrow}) 
+&
+    \quad+ \frac{1}{2\sqrt{2}} (\ket{\uparrow} - \ket{\downarrow}) 
     \Bigl( \bigl|\apparatusup\bigr> \bigl|\desk\bigr> 
     \bigl|\obsafter\brainup\bigr> - \bigl|\apparatusdown\bigr> 
     \bigl|\desk\bigr> \bigl|\obsafter\braindown\bigr> \Bigr),
 \label{eq:after-4}
-\end{eqnarray}
+\end{align}
 %
 does not affect physical predictions.
 
