--- a/1101.0593/YRHXS.tex
+++ b/1101.0593/YRHXS.tex
@@ -33,12 +33,28 @@
 % --- Line numbers for draft
 %\usepackage{lineno}
 % ------------------------------------
+
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
 \begin{document}
 
 % --- line numbers and draft heading
 %\linenumbers
 %\draftheading
-  
+
 %%% from here take the YR front page:
 
 \input{YRHXS_title}
