--- a/1101.0593/cernall.sty
+++ b/1101.0593/cernall.sty
@@ -152,7 +152,7 @@
 \pagestyle{plain}
 
 %%% Text font : Times Roman
-\renewcommand{\rmdefault}{ptm}
+%\renewcommand{\rmdefault}{ptm}
  
 %it uses the following info
 %   \typist{..}  (may be filename) printed at top left of title page
