--- a/1101.0593/cernyrep.cls
+++ b/1101.0593/cernyrep.cls
@@ -169,6 +169,6 @@
 \RequirePackage{cernunits}
 
 %%% Text font : Times Roman
-\renewcommand{\rmdefault}{ptm}
+%\renewcommand{\rmdefault}{ptm}
  
 \endinput
